--- a/app/src/main/res/layout/dialog_invite.xml
+++ b/app/src/main/res/layout/dialog_invite.xml
@@ -21,6 +21,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/etLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
