--- a/app/src/main/res/layout/dialog_team_leaders.xml
+++ b/app/src/main/res/layout/dialog_team_leaders.xml
@@ -7,6 +7,7 @@
     android:padding="16dp">
 
     <TextView
+        android:textColor="@color/leaderboard_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Таблица лидеров команд"
@@ -16,6 +17,7 @@
         android:layout_marginBottom="16dp"/>
 
     <ListView
+        android:textColor="@color/leaderboard_text"
         android:id="@+id/listLeaderboardTeams"
         android:layout_width="match_parent"
         android:layout_height="300dp"
