--- a/app/src/main/res/layout/item_participant.xml
+++ b/app/src/main/res/layout/item_participant.xml
@@ -30,24 +30,24 @@
 
             <!-- Позиция (цифра) -->
             <TextView
+                android:textColor="@color/leaderboard_text"
                 android:id="@+id/tvPosition"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:text=""
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <!-- Имя участника -->
             <TextView
+                android:textColor="@color/leaderboard_text"
                 android:id="@+id/tvParticipantName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginEnd="8dp"
                 android:text=""
-                android:textColor="#333333"
                 android:textSize="16sp"/>
 
             <!-- Количество очков -->
