--- a/app/src/main/res/layout-land/activity_group.xml
+++ b/app/src/main/res/layout-land/activity_group.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/group_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -99,6 +100,7 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <TextView
+        android:textColor="@color/leaderboard_text"
         android:id="@+id/tvParticipantsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,7 +108,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="3dp"
         android:text="Список участников:"
-        android:textColor="#666"
         android:textSize="20sp"
         android:textStyle="bold" />
 
