--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -7,6 +7,7 @@
     android:gravity="center">
 
     <TextView
+        android:textColor="@color/leaderboard_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Создание команды"
@@ -22,6 +23,7 @@
         android:hint="Название команды">
 
         <EditText
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/etTeamName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
