--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/group_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -77,6 +78,7 @@
 
     <!-- Секция мероприятий -->
     <TextView
+        android:textColor="@color/leaderboard_text"
         android:id="@+id/tvEventsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,7 +87,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="11dp"
         android:text="Мероприятия:"
-        android:textColor="#666"
         android:textSize="20sp"
         android:textStyle="bold" />
 
