--- a/app/src/main/res/layout/activity_select_team.xml
+++ b/app/src/main/res/layout/activity_select_team.xml
@@ -7,6 +7,7 @@
 
     <TextView
         android:id="@+id/tvTitle"
+        android:textColor="@color/leaderboard_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Выберите команду"
@@ -25,6 +26,7 @@
         android:textColor="@android:color/white"/>
 
     <TextView
+        android:textColor="@color/leaderboard_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ваши команды:"
