--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -50,13 +50,13 @@
             android:layout_marginBottom="16dp" />
 
         <TextView
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/tv_no_invites"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="У вас пока нет приглашений в группу"
             android:textSize="18sp"
             android:gravity="center"
-            android:textColor="@android:color/darker_gray"
             android:layout_marginBottom="24dp" />
 
         <Button
