--- a/app/src/main/res/layout/item_invite.xml
+++ b/app/src/main/res/layout/item_invite.xml
@@ -7,6 +7,7 @@
 
     <TextView
         android:id="@+id/tvInviteTeam"
+        android:textColor="@color/leaderboard_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Команда: "
@@ -15,6 +16,7 @@
 
     <TextView
         android:id="@+id/tvInviteCaptain"
+        android:textColor="@color/leaderboard_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Капитан: "
@@ -23,6 +25,7 @@
 
     <TextView
         android:id="@+id/tvInviteStatus"
+        android:textColor="@color/leaderboard_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Статус: "
