--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -15,12 +15,12 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:textColor="@color/leaderboard_text"
         android:id="@+id/tv_team_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginStart="16dp"
-        android:textColor="#333"
         android:textSize="16sp"/>
 
     <TextView
