--- a/app/src/main/res/layout/item_team_member_selection.xml
+++ b/app/src/main/res/layout/item_team_member_selection.xml
@@ -32,13 +32,13 @@
 
         <!-- Имя участника -->
         <TextView
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/tvMemberName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
             android:text=""
-            android:textColor="#333333"
             android:textSize="16sp"/>
 
         <!-- Количество очков -->
