--- a/app/src/main/res/layout/item_user_invite.xml
+++ b/app/src/main/res/layout/item_user_invite.xml
@@ -21,6 +21,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/tvUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,12 +30,12 @@
             android:textStyle="bold" />
 
         <TextView
+            android:textColor="@color/leaderboard_text"
             android:id="@+id/tvUserScore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Очки: 0"
-            android:textSize="14sp"
-            android:textColor="@android:color/darker_gray" />
+            android:textSize="14sp" />
 
     </LinearLayout>
 
