--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background_land"
     android:padding="16dp">
 
     <TextView
@@ -11,6 +12,7 @@
         android:gravity="center"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
         android:text="Вход в приложение" />
 
     <EditText
@@ -19,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:hint="Email"
         android:inputType="textEmailAddress"/>
 
@@ -27,6 +31,8 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:hint="Пароль"
         android:inputType="textPassword"/>
 
@@ -37,6 +43,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:text="Войти"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         style="@style/Widget.MaterialComponents.Button"/>
 
     <Button
@@ -46,6 +54,8 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:text="Регистрация"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         style="@style/Widget.MaterialComponents.Button"/>
 
 </LinearLayout>
