--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     android:padding="16dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="19sp"
         android:layout_marginTop="170dp"
+        android:textColor="@color/white"
         android:text="Вход в приложение" />
 
     <EditText
@@ -18,6 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:layout_marginTop="10dp"
         android:inputType="textEmailAddress"/>
 
@@ -26,24 +30,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:hint="Пароль"
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="Войти"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         style="@style/Widget.MaterialComponents.Button"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnGoToRegister"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_gravity="bottom"
         android:text="Регистрация"
         android:layout_marginTop="5dp"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         style="@style/Widget.MaterialComponents.Button"/>
 
