--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     android:padding="16dp">
 
     <TextView
@@ -10,7 +11,8 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="Регистрация"
-        android:layout_marginTop="250dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="170dp"
         android:textSize="20sp"/>
 
     <EditText
@@ -18,6 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Имя пользователя"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:layout_marginTop="20dp"/>
 
     <EditText
@@ -25,6 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:inputType="textEmailAddress"/>
 
     <EditText
@@ -32,14 +38,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Пароль"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/gray"
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="Зарегистрироваться"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_marginTop="8dp"/>
 
