--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="leaderboard_text">#000000</color>
     <color name="lemon">#fffc79</color>
     <color name="red">#ff0000</color>
+    <color name="gray">#bbbbbb</color>
 </resources>
