Доработка функционалов после слияния
1. Восстановлен функционал кнопки для окончания мероприятий.
2. Исправлено отображение фона организатора в Загадках
3. Добавлен предпросмотр для организатора при создании мероприятия
4. Доработка оформления

--- a/app/src/main/res/layout/activity_create_riddles.xml
+++ b/app/src/main/res/layout/activity_create_riddles.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="К предпросмотру"
+        android:text="Далее"
         android:textSize="18sp"/>
 
 </RelativeLayout> 
