--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -231,6 +231,14 @@
             android:layout_height="wrap_content"
             android:text="Список команд с баллами"
             android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"/>
+
+        <ListView
+            android:id="@+id/listViewRegisteredTeams"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="1dp"
             android:layout_marginBottom="12dp"/>
 
         <Button
