--- a/app/src/main/res/layout/activity_event_preview.xml
+++ b/app/src/main/res/layout/activity_event_preview.xml
@@ -101,6 +101,14 @@
             android:layout_marginTop="8dp"/>
 
         <Button
+            android:id="@+id/btnFullScreenPreview"
+            android:backgroundTint="?attr/colorButtonNormal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Предпросмотр экрана"
+            android:layout_marginTop="8dp"/>
+
+        <Button
             android:id="@+id/btnConfirmAndCreate"
             android:backgroundTint="?attr/colorButtonNormal"
             android:layout_width="match_parent"
