--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -4,15 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="12dp"
-    android:background="?android:attr/selectableItemBackground">
-
-    <TextView
-        android:id="@+id/tv_position"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:gravity="center"
-        android:textColor="#000"
-        android:textStyle="bold"/>
+    android:background="@drawable/bg_blur_rect">
 
     <TextView
         android:textColor="@color/leaderboard_text"
